[package]
name = "bevy_generic_systems"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Experiments with automatically registering generic systems."
repository = "https://github.com/coolcatcoder/bevy_generic_systems"
readme = "README.md"
keywords = ["bevy", "query", "generics"]
categories = ["game-development"]

[workspace]
members = ["component_field_behaviour", "component_field_behaviour/procedural_macros"]
